Added proper search button

--- a/search.html
+++ b/search.html
@@ -10,9 +10,8 @@
     <a href="student.html">Home</a>
     <h1>Search Page</h1>
     <form>
-        Query: <input type="text">
+        Query: <input type="text"><input type="submit" name = "search" value="Search for rooms">
     </form>
-    <a href="search.html">Search / Search Again</a>
     <p>Search results here</p>
     
 </body>
