--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <center>
 		<h2>Login</h2>
-		<form action="/action_page.php">
+		<form action="/loginPage.jsp">
 		  Username:<br>
 		  <input type="text" name="username" value="">
 		  <br>
