index.html looks respectable

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang = "en">
 <head>
     <meta charset = "utf-8">
-    <title>Main</title>
-    
+    <title>Lakehead University Residence</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 </head>
 <body>
-    <center>
-		<h2>Login</h2>
+	<center>
+	<h2>Residence Login</h2>
+	<div class = "login-card">
 		<form action="jsp/loginPage.jsp">
 		  Username:<br>
 		  <input type="text" name="username" value="">
@@ -19,7 +21,8 @@
 		  <input type="submit" name = "s_login" value="Student Login"><br>
 		  <input type="submit" name = "s_register" value="Register (as Student)">
 		</form>
-	</center>
+		</center>
+	</div>
 </body>
     
 </html>
