--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
 	<center>
 	<h2>Residence Login</h2>
+	</center>
 	<div class = "login-card">
 		<form action="jsp/loginPage.jsp">
 		  Username:<br>
-		  <input type="text" name="username" value="">
+		  <input style = "width: 100%" type="text" name="username" value="">
 		  <br>
 		  Password:<br>
-		  <input type="password" name="password" value="">
+		  <input style = "width: 100%" type="password" name="password" value="">
 		  <br><br>
-		  <input type="submit" name = "m_login" value="Manager Login">
-		  <input type="submit" name = "s_login" value="Student Login"><br>
-		  <input type="submit" name = "s_register" value="Register (as Student)">
+		  <input style = "width: 100%" type="submit" name = "m_login" value="Manager Login"><br>
+		  <input style = "width: 100%" type="submit" name = "s_login" value="Student Login"><br>
+		  <input style = "width: 100%" type="submit" name = "s_register" value="Register (as Student)"><br>
 		</form>
-		</center>
 	</div>
 </body>
     
