--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset = "utf-8">
     <title>Lakehead University Residence</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 </head>
 <body>
