--- a/html/enterWorkOrder.html
+++ b/html/enterWorkOrder.html
@@ -12,7 +12,7 @@
 	<center><h2>Submit a Work Order</h2></center>
 
 	<div class = "login-card">
-		<form action="createWorkOrder.jsp" method="post">
+		<form action="../jsp/createWorkOrder.jsp" method="post">
 
 		Subject: <input style = "width: 98%" type="text" name="roomNum" /><br><br>
 		Message: <input type = "text" style = "width: 98%" name = "building"/><br><br>
