--- a/html/enterWorkOrder.html
+++ b/html/enterWorkOrder.html
@@ -9,7 +9,10 @@
 
 	<body>
 	
-	<center><h2>Submit a Work Order</h2></center>
+	<center>
+	<br><div class = "login-card"><img src = "../css/logo.png"></img></div><br><br><br>
+	<h2>Submit a Work Order</h2>
+	</center>
 
 	<div class = "login-card">
 		<form action="../jsp/createWorkOrder.jsp" method="post">
