--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<center>
+	<br><div class = "login-card"><img src = "css/logo.png"></img></div><br><br><br>
 	<h2>Residence Login</h2>
 	</center>
 	<div class = "login-card">
