--- a/index.html
+++ b/index.html
@@ -6,24 +6,35 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 </head>
+
 <body>
-	<center>
-	<br><div class = "login-card"><img src = "css/logo.png"></img></div><br><br><br>
-	<h2>Residence Login</h2>
-	</center>
-	<div class = "login-card">
-		<form action="jsp/loginPage.jsp">
-		  Username:<br>
-		  <input style = "width: 100%" type="text" name="username" value="">
-		  <br>
-		  Password:<br>
-		  <input style = "width: 100%" type="password" name="password" value="">
-		  <br><br>
-		  <input style = "width: 100%" type="submit" name = "m_login" value="Manager Login"><br>
-		  <input style = "width: 100%" type="submit" name = "s_login" value="Student Login"><br>
-		  <input style = "width: 100%" type="submit" name = "s_register" value="Register (as Student)"><br>
+	<div class = 'container nobg' style = 'margin-top: 40px;'>
+		<div class = 'row'>
+			<div class = "one column">
+				<img src = "css/logo.png"></img>
+			</div>
+		</div>
+	</div>
+	<div class = 'container' style = 'margin-top: 40px;'>
+		<h2>Residence Login</h2>
+		<form>
+		  <div class="row">
+			<div class="six columns">
+			  <label for="exampleEmailInput">Email</label>
+			  <input class="u-full-width" placeholder="test@mailbox.com" name="username" type="email">
+			</div>
+			<div class="six columns">
+			  <label for="exampleRecipientInput">Password</label>
+			  <input class="u-full-width" placeholder="" name="password" type="password">
+			</div>
+		  </div>
+		  <input class = "button-primary" type="submit" name = "s_login" value="Student Login">
+		  <input type="submit" name = "s_register" value="Register (as Student)">
+		  <input type="submit" name = "m_login" value="Manager Login">
+		  
 		</form>
 	</div>
 </body>
     
 </html>
+
