Centered university logo on login page

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 
 <body>
 	<div class = 'container nobg' style = 'margin-top: 40px;'>
-		<div class = 'row'>
-			<div class = "one column">
-				<img src = "css/logo.png"></img>
-			</div>
-		</div>
+		<center><img src = "css/logo.png"></img></center>
 	</div>
 	<div class = 'container' style = 'margin-top: 40px;'>
 		<h2>Residence Login</h2>
