Upgrade enterApplicationInfo.jsp to Skeleton
Changed the form fields as well. Discussion will need to be had.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		  <div class="row">
 			<div class="six columns">
 			  <label for="exampleEmailInput">Email</label>
-			  <input class="u-full-width" placeholder="test@mailbox.com" name="username" type="email">
+			  <input class="u-full-width" placeholder="example@lakeheadu.ca" name="username" type="email">
 			</div>
 			<div class="six columns">
 			  <label for="exampleRecipientInput">Password</label>
