--- a/html/enterWorkOrder.html
+++ b/html/enterWorkOrder.html
@@ -13,21 +13,26 @@
 		<center><img src = "../css/logo.png"></img></center>
 	</div>
 
+	<!--NAVIGATION BAR...how to add without copy/paste?-->
 	<div class = "container" style = "padding: 20px 40px 20px 40px">
 		<div class = "row">
 			<div class = "six columns">
 				<h5>Signed in as Jeremy Braun</h5>
 			</div>
+			<div class = "u-pull-right">
+				<h5>Student</h5>
+			</div>
 		</div>
 		<div class = "row">
 			<div class = "twelve columns u-pull-right">
 				<button>Student Portal</button>
-				<button>My Applications</button>
-				<button>My Work Orders</button>
+				<button>Pending Applications</button>
+				<button>Work Orders</button>
 				<button>Sign out</button>
 			</div>
 		</div>
 	</div>
+	
 	<div class = "container" style = "margin-top: 40px;">
 		<h4>Submit a work order</h4>
 		<form action="../jsp/createWorkOrder.jsp>
