--- a/html/enterWorkOrder.html
+++ b/html/enterWorkOrder.html
@@ -9,11 +9,12 @@
 
 <body>
 
+	<!--UNIVERSITY LOGO-->
 	<div class = 'container nobg'>
 		<center><img src = "../css/logo.png"></img></center>
 	</div>
 
-	<!--NAVIGATION BAR...how to add without copy/paste?-->
+	<!--NAVIGATION BAR-->
 	<div class = "container" style = "padding: 20px 40px 20px 40px">
 		<div class = "row">
 			<div class = "six columns">
@@ -25,7 +26,8 @@
 		</div>
 		<div class = "row">
 			<div class = "twelve columns u-pull-right">
-				<button>Student Portal</button>
+				<button class = "button-primary">Apply to Residence</button>
+				<button>News Feed</button>
 				<button>Pending Applications</button>
 				<button>Work Orders</button>
 				<button>Sign out</button>
@@ -33,6 +35,7 @@
 		</div>
 	</div>
 	
+	<!--MAIN PANEL WITH FORM-->
 	<div class = "container" style = "margin-top: 40px;">
 		<h4>Submit a work order</h4>
 		<form action="../jsp/createWorkOrder.jsp>
