--- a/html/enterWorkOrder.html
+++ b/html/enterWorkOrder.html
@@ -18,7 +18,7 @@
 	<div class = "container" style = "padding: 20px 40px 20px 40px">
 		<div class = "row">
 			<div class = "six columns">
-				<h5>Signed in as Jeremy Braun</h5>
+				<% HttpSession sess = request.getSession(); out.println("<h5>Signed in as "+(String)sess.getAttribute("name")+"</h2>"); %>
 			</div>
 			<div class = "u-pull-right">
 				<h5>Student</h5>
@@ -26,13 +26,13 @@
 		</div>
 		<div class = "row">
 			<div class = "twelve columns u-pull-right">
-				<button class = "button-primary">Apply to Residence</button>
-				<button>News Feed</button>
-				<button>Pending Applications</button>
-				<button>Work Orders</button>
-				<button>Sign out</button>
+				<a href = "../jsp/student.jsp" class = "button">News Feed</a>
+				<a href = "../jsp/viewApplications.jsp" class = "button">Your Application</a>
+				<a href = "../jsp/viewPendingWorkOrders.jsp" class = "button">Your Work Orders</a>
+				<a href = "../index.html" class = "button">Sign out</a>
 			</div>
 		</div>
+	</div>
 	</div>
 	
 	<!--MAIN PANEL WITH FORM-->
