Moved pages to /pages and scripts to /scripts
If you have a problem with this decision please get in contact with my supervisor.

--- a/pages/enterWorkOrder.html
+++ b/pages/enterWorkOrder.html
@@ -26,13 +26,12 @@
 		</div>
 		<div class = "row">
 			<div class = "twelve columns u-pull-right">
-				<a href = "../jsp/student.jsp" class = "button">News Feed</a>
-				<a href = "../jsp/viewApplications.jsp" class = "button">Your Application</a>
-				<a href = "../jsp/viewPendingWorkOrders.jsp" class = "button">Your Work Orders</a>
+				<a href = "../pages/student.jsp" class = "button">News Feed</a>
+				<a href = "../pages/viewApplications.jsp" class = "button">Your Application</a>
+				<a href = "../pages/viewPendingWorkOrders.jsp" class = "button">Your Work Orders</a>
 				<a href = "../index.html" class = "button">Sign out</a>
 			</div>
 		</div>
-	</div>
 	</div>
 	
 	<!--MAIN PANEL WITH FORM-->
