--- a/pages/enterWorkOrder.html
+++ b/pages/enterWorkOrder.html
@@ -37,7 +37,7 @@
 	<!--MAIN PANEL WITH FORM-->
 	<div class = "container" style = "margin-top: 40px;">
 		<h4>Submit a work order</h4>
-		<form action="../jsp/createWorkOrder.jsp>
+		<form action="../scripts/createWorkOrder.jsp>
 			<div class="row">
 				<div class="u-full-width">
 					<label for="subject">Subject</label>
