--- a/student/newworkorder.html
+++ b/student/newworkorder.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 </head>
+
 <body>
-    
+
 	<!--UNIVERSITY LOGO-->
 	<div class = 'container nobg'>
 		<center><img src = "../css/logo.png"></img></center>
@@ -25,18 +26,37 @@
 		</div>
 		<div class = "row">
 			<div class = "twelve columns u-pull-right">
-				<a href = "../pages/student.jsp" class = "button">News Feed</a>
-				<a href = "../pages/viewApplications.jsp" class = "button">Your Application</a>
-				<a href = "../pages/viewPendingWorkOrders.jsp" class = "button">Your Work Orders</a>
+				<a href = "index.jsp" class = "button">News Feed</a>
+				<a href = "applications.jsp" class = "button">Your Application</a>
+				<a href = "" class = "button">Your Work Orders</a>
 				<a href = "../index.html" class = "button">Sign out</a>
 			</div>
 		</div>
 	</div>
 	
+	<!--MAIN PANEL WITH FORM-->
 	<div class = "container" style = "margin-top: 40px;">
-		<h4>News Feed</h4>
+		<h4>Submit a work order</h4>
+		<form action="../scripts/createWorkOrder.jsp>
+			<div class="row">
+				<div class="u-full-width">
+					<label for="subject">Subject</label>
+					<input class="u-full-width" placeholder="What's wrong?" id="subject" type="text" name = "subject">
+					<label for="priority">Priority</label>
+					<select class="u-full-width" id="priority" name="priority">
+						<option>Low</option>
+						<option>Normal</option>
+						<option>High</option>
+					</select>
+					<label for="noteText">Additional Notes</label>
+					<textarea class="u-full-width" placeholder="Describe the problem..." id="noteText" name="noteText"></textarea>
+					<input class="button-primary" value="Submit request" type="submit">
+				</div>
+			</div>
+		</form>
 	</div>
+	
 
 </body>
-    
+
 </html>
