--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 		  </div>
 		  <input class = "button-primary" type="submit" name = "s_login" value="Student Login">
 		  <input class = "u-pull-right" type="submit" name = "m_login" value="Manager Login">
-		  <input type="submit" name = "s_register" value="Register (as Student)">
-		  
+          <a class="button" href="register.html">Register (as student)</a>
 		</form>
 	</div>
 </body>
